--- a/languages/en.yml
+++ b/languages/en.yml
@@ -5,3 +5,4 @@ next_post: next
 read_more: '&hellip; more'
 untitled: (untitled)
 translate_original: Translate the original address
+meta_description: A Blog Powered By Hexo')
